added youtube video link

--- a/_posts/2018-12-23-yolo.md
+++ b/_posts/2018-12-23-yolo.md
@@ -18,10 +18,10 @@ Maddie and Olivia
 
 Aimée (the big puppy ;-)
 
-I created a [a short video clip](https://www.youtube.com/watch?v=GToRQ4Tiqrs) to demo how YOLO processes traffic on a city street.
+I created a [a short video clip](https://youtu.be/6JT1i8k1ltg) to demo how YOLO processes traffic on a city street.
 I took a video of Taylor St in downtown San Jose and ran it through YOLO to mark objects' location.
 
- ![video](https://img.youtube.com/vi/GToRQ4Tiqrs/0.jpg)
+ ![video](https://img.youtube.com/vi/6JT1i8k1ltg/0.jpg)
 
 Here are the steps that you want to follow if you want to do this yourself:
 
