fixing a grammatical error

--- a/_posts/2018-12-23-yolo.md
+++ b/_posts/2018-12-23-yolo.md
@@ -28,7 +28,7 @@ Here are the steps that you want to follow if you want to do this yourself:
 1. Prepare a video
     1. Capture a video or find a video you want to use for object detection.
     1. Extract frames from the video (e.g. using ffmpeg)
-1. Go to [the YOLO developer's main website](https://pjreddie.com/darknet/yolo/). Follow instructions on the website has instructions:
+1. Go to [the YOLO developer's main website](https://pjreddie.com/darknet/yolo/). Follow instructions on the website:
     1. git clone the source code 
     1. Download pre-trained weights file
     1. Build using make
